# routes/routes.go
@@ -61,7 +61,13 @@ func SetupRoutes(app *fiber.App) {
 	app.Post("/generate-token", handlers.Token)
 	app.Post("/23", handlers.CreditTransferSending)
 	app.Post("/24", handlers.TransferCreditProcess)
+	app.Post("/balance", handlers.DeductBalance)
+	// app.Post("/Login", handlers.Manage)
 
+	app.Post("/send-email", handlers.Email)      //Email
+	app.Post("/feedbackId", handlers.FeedbackId) //feedbackID
+	// app.Post("/feedback-Acc", handlers.Feedback) //feedbackACc
+	app.Post("/Trace", handlers.Trace) //Trace
 }
 func AuthenticatedRoutes(app *fiber.App) {
 	// Apply JWTMiddleware to these routes
